--- a/src/main/java/com/ma/supermarket/问题.md
+++ b/src/main/java/com/ma/supermarket/问题.md
@@ -2,4 +2,14 @@
 ##1.在进行注册插入的时候，role_id不能够自动增长，但是按正常处理，id不应该是插入。而数据库表里边只支持一个列自增。
 ##2.前端传过来的urole是一个字符串，然后我自己定义的是一个整型，这得进行转换
 ##3.我的service里边的注册，要是我把他封装成一个实体，我需要给他set的时候报错了，我又怎么获取前端传给我的值呢？
-
+##4.我的role_id没有默认值，我又设的是非空？这个问题要怎么解决？
+##5.controller里边传入的值，要和sql语句的#号后边的一一对应？
+##6.我想知道某个昵称是否存在，如果在service类里边的regist放一个封装好的实体，那怎么判断昵称，然后在进行插入呢？
+#登录模块
+##1.报了这个错There was an unexpected error (type=Internal Server Error, status=500).
+##nested exception is org.apache.ibatis.executor.ExecutorException: 
+##A query was run and no Result Maps were found for the Mapped Statement 'com.ma.supermarket.mapper.UserMapper.login'. 
+##It's likely that neither a Result Type nor a Result Map was specified.
+#商品模块
+##1.我可以在xml里边的where子句里写=0？
+##2.我根据库存id查的库存量，但是没有库存量这个参数，我怎么去做具体的业务代码
